--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -17,6 +17,9 @@ builds:
 archives:
   - format: tar.gz
     # this name template makes the OS and Arch compatible with the results of uname.
+    files:
+      - sql/
+      - config.yaml
     name_template: >-
       {{ .ProjectName }}_
       {{- title .Os }}_
